k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: college-campus-service
  namespace: campus-prod
  labels:
    app: college-campus
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: college-campus
